--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
     "pg": "^8.14.1",
     "sequelize": "^6.37.7"
   }
